--- a/style.css
+++ b/style.css
@@ -149,6 +149,37 @@ html, body {
     pointer-events: none; 
 }
 
+#ui input[type="checkbox"] {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #00ffcc;
+    border-radius: 4px;
+    background-color: #2b2b2b;
+    cursor: pointer;
+    position: relative;
+    vertical-align: middle;
+    margin-right: 0.5rem;
+    transition: all 0.2s ease;
+}
+
+#ui input[type="checkbox"]:checked {
+    background-color: #00ffcc;
+    box-shadow: 0 0 5px #00ffcc;
+}
+
+#ui input[type="checkbox"]:checked::after {
+    content: "";
+    position: absolute;
+    left: 5px;
+    top: 2px;
+    width: 4px;
+    height: 9px;
+    border: solid black;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+
 
 @media screen {
     
